--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     border-style: initial;
     border-color: black;
     outline: auto;
-    outline-offset: 0.2em;    
+    outline-offset: 0.2em; 
 }
 
 h3{
@@ -22,6 +22,7 @@ h3{
 #cp{
     text-align: center;
     font-size: large;
+    text-shadow: whitesmoke 1px 1px 1px;
 }
 
 .button-designs{
@@ -68,6 +69,17 @@ body{
     background-image: url(itachi-crop.png);
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 768px) {
+    body{
+        object-fit: cover;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 #minato{
